--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,13 @@
     <link rel="stylesheet" href="/assets/css/styles.css">
   </head>
   <body>
-    {% include navigation.html %}
-    {{ content }}
+    <main>
+        <div id="navbar">
+            {% include navigation.html %}
+        </div>
+        <div id="mainContent">
+            {{ content }}
+        </div>
+    </main>
   </body>
 </html>
