--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,6 @@
 <nav>
     {% for item in site.data.navigation %}
-      <a id="navItem" href="{{ item.link }}" {% if page.url == item.link %}style="color: red;"{% elsif page.url != item.link %}style="color: gray;"{% endif %}>
+      <a id="navItem" href="{{ item.link }}" {% if page.url == item.link %}style="color: lightcoral;"{% elsif page.url != item.link %}style="color: gray;"{% endif %}>
         {{ item.name }}
       </a>
     {% endfor %}
