Added basic mobile detection script

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/assets/css/styles.css">
   </head>
   <body>
-    <main>
+    <main id="mainSect">
         <div id="navbar">
             {% include navigation.html %}
         </div>
@@ -15,4 +15,5 @@
         </div>
     </main>
   </body>
+  <script type="text/javascript" src="../assets/js/index.js"></script>
 </html>
