--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,6 +8,8 @@ main
     letter-spacing: 0.1em;
     line-height: 2em;
     font-size: 1.25em;
+    background-color: #fbfbfb;
+    color: #2b2b2b;
 }
 
 #mainContent
@@ -16,6 +18,7 @@ main
     display: flex;
     height: 95vh;
     justify-content: center;
+    background-color: #fbfbfb;
 }
 
 #generalInfo
@@ -50,6 +53,7 @@ main
     justify-content: center;
     margin-left: auto; 
     height: 5vh;
+    background-color: #fbfbfb;
 }
 #navItem
 {
@@ -82,8 +86,10 @@ main
 #programming
 {
     background-color: lightskyblue;
+    border-radius: 0.5em;
     margin-left: 0.5em;
     margin-right: 0.5em;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2), 0 15px 40px rgba(0, 0, 0, 0.05);
 }
 #progTitle
 {
@@ -144,8 +150,10 @@ main
 #technologies
 {
     background-color: lightskyblue;
+    border-radius: 0.5em;
     margin-left: 0.5em;
     margin-right: 0.5em;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2), 0 15px 40px rgba(0, 0, 0, 0.05);
 }
 #techTitle
 {
@@ -182,9 +190,16 @@ main
     display: flex;
     justify-content: center;
     margin-top: 2em;
+    border-radius: 0.5em;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2), 0 15px 40px rgba(0, 0, 0, 0.05);
 }
 
 /*Blog posts*/
+#viewMore
+{
+    font-size: 0.75em;
+}
+
 #post
 {
     display: flex;
@@ -197,7 +212,11 @@ footer
 {
     display: flex;
     flex-direction: row;
-    background: gray;
+    background: rgb(221, 221, 221);
     justify-content: center;
     font-size: 0.5em;
+}
+footer a 
+{
+    margin: 1em;
 }
