--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,68 +1,96 @@
-/*General*/
-main
+body
 {
+    background-color: #fbfbfb;
     font-family: 'Roboto', sans-serif;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
     letter-spacing: 0.1em;
     line-height: 2em;
-    font-size: 1.25em;
-    background-color: #fbfbfb;
+    font-size: 1.15em;
     color: #2b2b2b;
+    overflow-x: hidden;
+}
+
+#navbar
+{
+    display: flex;
+    flex-direction: column;
 }
 
 .mainContent
 {
-    padding: 1em;
-    display: flex;
-    height: 95vh;
-    justify-content: center;
+    width: 100%;
     background-color: #fbfbfb;
     opacity: 0;
 }
 
+#headerWrapper
+{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+#headerWrapper img
+{
+    width: 1em;
+    height: 1em;
+    padding: 0.5em;
+}
 
 #generalInfo
 {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+    background-color: #fbfbfb;
 }
-
+#generalInfo h1
+{
+    color: lightskyblue;
+}
+#wrapper
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 #divider
 {
-    background-color: lightskyblue;
-    height: 0.1em;
+    background-color: lightcoral;
+    height: 1px;
+    width: 60%;
     margin: 3em;
 }
 
-#home
-{
-    width: 50%;
-    padding: 3em;
-}
 #home h1
 {
     color: lightskyblue;
 }
 
 /*Navigation*/
-#navbar
+#navbar nav
 {
     display: flex;
-    width: 50%;
-    justify-content: center;
-    margin-left: auto; 
-    height: 5vh;
-    background-color: #fbfbfb;
+    justify-content: flex-end;
+    flex-direction: row;
+    width: 100%;
 }
 #navItem
 {
-    padding: 0.5em;
+    font-size: 0.75em;
+    margin-right: 0.5em;
+    margin-left: 0.5em;
+}
+#navbar p
+{
+    margin-right: 2em;
 }
 
 /*Intro*/
+#intro
+{
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 #mainIntro
 {
     width: 60%;
@@ -70,13 +98,11 @@ main
 #subIntro 
 {
     font-size: 0.75em;
-    width: 90%;
+    width: 100%;
 }
 #skills
 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    width: 50%;
 }
 
 /*Programming section*/
@@ -128,7 +154,11 @@ main
 {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
+    width: 75%;
+}
+#projSubTitle {
+    font-size: 0.75em;
 }
 #projectTitle
 {
@@ -138,41 +168,60 @@ main
 #projectList
 {
     display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+#projectList div
+{
+    display: flex;
+    align-items: center;
+}
+#projWrapper
+{
+    display: flex;
+    width: 50%;
     flex-direction: column;
 }
 #projectList a
 {
-    background-color: lightcoral;
     display: flex;
     justify-content: center;
-    margin-top: 2em;
     border-radius: 0.5em;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2), 0 15px 40px rgba(0, 0, 0, 0.05);
-}
 
-/*Blog posts*/
+}
+#projectList img
+{
+    width: 25em;
+    height: 20em;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2), 0 15px 40px rgba(0, 0, 0, 0.05);
+    border-radius: 0.5em;
+}
+#projSubText
+{
+    font-size: 0.5em;
+    width: 75%;
+    text-align: center;
+}
+/*Home blog posts*/
+#blogPosts p
+{
+    width: 75%;
+    font-size: 0.75em;
+}
+#blogDate
+{
+    font-size: 0.5em;
+}
 #viewMore
 {
     font-size: 0.75em;
 }
 
+/*Blog page*/
 #post
 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-}
-
-/*Footer*/
-footer
-{
-    display: flex;
-    flex-direction: row;
-    background: rgb(221, 221, 221);
-    justify-content: center;
-    font-size: 0.5em;
-}
-footer a 
-{
-    margin: 1em;
 }
