--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,4 +24,6 @@
   </body>
   <script type="text/javascript" src="../assets/js/mobileDetection/index.js"></script>
   <script type="text/javascript" src="../assets/js/fadeEffect/index.js"></script>
+  <script type="text/javascript" src="../assets/js/core/changeTextColor.js"></script>
+  <script src="https://kit.fontawesome.com/8daf83b7f4.js" crossorigin="anonymous"></script>
 </html>
