--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -26,6 +26,13 @@ body
     margin-bottom: 5%;
 }
 
+#name
+{
+    text-decoration: underline;
+    text-decoration-color: #bfedef;
+    height: 1em;
+    font-weight: bold;
+}
 #headerWrapper
 {
     display: flex;
@@ -41,7 +48,7 @@ body
     width: 1em;
     height: 1em;
     margin-left: 0.5em;
-    margin-right: 0.25em;
+    margin-right: 0.25;
 }
 .fab fa-linkedin
 {
@@ -54,9 +61,10 @@ body
     background-color: #bbc7ce;
     width: 60%
 }
-#generalInfo h1
+#headerWrapper h1
 {
     color: #545c52;
+    text-shadow: -3px 0 #545c52, 0 1px #545c52, 1px 0 #545c52, 0 -1px #545c52;
 }
 #wrapper
 {
@@ -72,11 +80,6 @@ body
     width: 75%;
     margin: 1em;
 }
-#home h1
-{
-    color: #98e2c6 !important;
-}
-
 /*Navigation*/
 #navbar nav
 {
@@ -93,13 +96,13 @@ body
 }
 #navbar p
 {
-    margin-right: 2em;
+    margin-right: 6em;
 }
 
 /*Intro*/
 #intro
 {
-    width: 60%;
+    width: 65%;
     display: flex;
     flex-direction: column;
     justify-content: center;
