--- a/_layouts/defaultContact.html
+++ b/_layouts/defaultContact.html
@@ -24,5 +24,6 @@
   </body>
   <script type="text/javascript" src="../assets/js/mobileDetection/index.js"></script>
   <script type="text/javascript" src="../assets/js/fadeEffect/index.js"></script>
+  <script type="text/javascript" src="../assets/js/core/validateInput.js"></script>
   <script src="https://kit.fontawesome.com/8daf83b7f4.js" crossorigin="anonymous"></script>
 </html>
