--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,7 @@ layout: defaultBlog
 ---
 
 <div id="post">
+    <a href="../../../blog.html">Return to Blog Posts</a>
     <h1>{{ page.title }}</h1>
     <p>{{ page.date | date_to_string }} - {{ page.author }}</p>
 
