Redesign with responsive layout. Still needs more styling, especially on the blog and contact pages, but it's starting to come together.

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,6 @@
-<nav id="navigationElement">
+<nav id="navigationElem">
     {% for item in site.data.navigation %}
-      <a id="navItem" href="{{ item.link }}" {% if page.url == item.link %}style="color: #98E2C6;"{% elsif page.url != item.link %}style="color: #545c52;"{% endif %}>
+      <a id="navItem" href="{{ item.link }}" {% if page.url == item.link %}style="color: #F06543;"{% elsif page.url != item.link %}style="color: #313638;"{% endif %}>
         {{ item.name }}
       </a>
     {% endfor %}
