--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,12 +5,7 @@
     <title>{{ page.title }}</title> 
     <link rel="stylesheet" href="/assets/css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
-
-    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <main id="mainSect">
@@ -22,7 +17,6 @@
         </div>
     </main>
   </body>
-  <script type="text/javascript" src="../assets/js/mobileDetection/index.js"></script>
   <script type="text/javascript" src="../assets/js/fadeEffect/index.js"></script>
   <script src="https://kit.fontawesome.com/8daf83b7f4.js" crossorigin="anonymous"></script>
 </html>
