Improved styling of the blog page, as well as small styling tweaks to the home and contact pages.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
         <div id="navbar">
           {% include navigation.html %}
         </div>
-        <div class="mainContent">
+        <div id="mainContent">
             {{ content }}
         </div>
     </main>
