--- a/_layouts/defaultContact.html
+++ b/_layouts/defaultContact.html
@@ -8,12 +8,12 @@
     rel="stylesheet"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body>
+  <body> 
     <main id="mainSect">
         <div id="navbar">
           {% include navigation.html %}
         </div>
-        <div class="mainContent">
+        <div id="mainContent">
             {{ content }}
         </div>
     </main>
