--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,16 +16,26 @@ body
     line-height: 1.75em;
 }
 
-.mainContent
+#mainSect
 {
+    width: 100%;
+}
+
+#mainContent
+{
+    width: 100%;
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
     padding-top: 4em;
 }
 
 /*Nav*/
+
 #navbar
 {
+    width: 100%;
     display: flex;
     justify-content: center;
 }
@@ -35,13 +45,12 @@ body
     padding: 0.25em;
 }
 
-/*Home page*/
+/*Mobile*/
 @media only screen and (max-width: 1024px) 
 {
     #navigationElem
     {
         display: flex;
-        justify-content: flex-end;
         position: fixed;
         justify-content: center;
         top: 0;
@@ -55,28 +64,30 @@ body
 
     #general
     {
-        max-width: 100%;
-        min-width: 100%;
-        max-height: 95%;
-        min-height: 75%;
-        color: #313638;
-        font-size: 1em;
-        flex-wrap: wrap;
+        width: 99%;
     }
 
     #contact
     {
+        margin: 1em;
+        width: 99%;
         background-color: #FBFBFB;
-        padding: 1em;
-        max-width: 89.5%;
-        min-width: 89.5%;
-        max-height: 95%;
-        min-height: 75%;
+        box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin: 0.9em;
+
+    }
+
+    #blogIntro
+    {
+        margin-top: 1em;
+        width: 99%;
+        background-color: #FBFBFB;
         box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     #intro h2
@@ -134,6 +145,7 @@ body
     }
 }
 
+/*Desktop*/
 @media only screen and (min-width: 1025px)
 {
     #navigationElem
@@ -146,35 +158,41 @@ body
         box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
         background-color: #FBFBFB;
         padding-top: 1em;
-        padding-right: 5em;
+        padding-right: 10em;
         padding-bottom: 1em;
         font-size: 1.15em;
     }
 
+    /*Main page styles*/
     #general
     {
-        max-width: 60%;
-        min-width: 25%;
-        max-height: 95%;
-        min-height: 75%;
-        color: #313638;
-        font-size: 1em;
-        flex-wrap: wrap;
+        width: 50%;
     }
 
     #contact
     {
-        background-color: #FBFBFB;
         margin-top: 1em;
-        max-width: 60%;
-        min-width: 25%;
-        max-height: 95%;
-        min-height: 75%;
+        width: 50%;
+        background-color: #FBFBFB;
+        box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+    }
+
+    #blogIntro
+    {
+        margin-top: 1em;
+        width: 50%;
+        background-color: #FBFBFB;
+        box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
         display: flex;
         flex-direction: column;
         align-items: center;
     }
 
+    /*Home page styles*/
     #listWrapper
     {
         display: flex;
@@ -197,12 +215,12 @@ body
 
     #introWrapper
     {
-        margin: 1em;
+        margin-top: 1em;
     }
 
     #skillsWrapper
     {
-        margin: 1em;
+        margin-top: 1em;
     }
 }
 
@@ -223,18 +241,18 @@ body
     border: 1px solid #DB5C3D;
     cursor: pointer;
     color: #313638;
-    padding: 0.5em;
+    padding: 0.75em;
     min-width: 5%;
     text-align: center;
 }
 
 
-#headElem
+.headElem
 {
     font-weight: normal;
 }
 
-#headElem span
+.headElem span
 {
     border-bottom: 0.25em solid #F06543; 
 }
@@ -280,6 +298,20 @@ body
 }
 
 /*Contact*/
+#mainContact
+{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+#contact h1
+{
+    padding-top: 1em;
+    color: #F06543;
+    font-size: 1.5em;
+}
+
 #contact form
 {
     display: flex;
@@ -288,9 +320,64 @@ body
     padding: 1em;
 }
 
-#contactInputMessage
+#contact input
 {
-    font-size: 1.15em;
+    font-size: 1em;
 }
 
+#contactInputMessage
+{
+    font-size: 1.25em;
+}
+
+/*Blog wrapper page*/
+#blogPageWrapper
+{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+#blogIntroWrapper
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#marginWrap
+{
+    margin: 1em;
+
+}
+
+#marginWrap p
+{
+    font-size: 0.7em;
+}
+
+#marginWrap h1
+{
+    font-weight: normal;
+    font-size: 1em;
+}
+
+#marginWrap h3
+{
+    font-size: 0.85em;
+    width: 85%;
+}
+
+#marginWrap h1
+{
+    font-size: 1.5em;
+    color: #F06543;
+}
+
+#blogIntro ul a
+{
+    font-size: 1.5em;
+    text-decoration: none;
+    border-bottom: 0.25em solid #F06543; 
+}
 
