--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,10 +2,15 @@
 layout: defaultBlog
 ---
 
-<div id="post">
-    <a href="../../../blog.html">Return to Blog Posts</a>
-    <h2>{{ page.title }}</h2>
-    <p>{{ page.date | date_to_string }} - {{ page.author }}</p>
+<div id="postWrapper">
+    <div id="post">
+        <div id="postMarginWrap">
+            <a href="../../../blog.html">Return to Blog Posts</a>
+            <div id="divider"></div>
+            <h1 class="headElem">{{ page.title }}</h1>
+            <p id="postDate"><span>{{ page.author }}</span>: {{ page.date | date_to_string }}</p>
 
-    {{ content }}
+            {{ content }}
+        </div>
+    </div>
 </div>
