--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -137,6 +137,18 @@ body
         margin-top: 1em;
         margin-bottom: 1em;
     }
+
+    #projects
+    {
+        padding: 1em;  
+        background-color: #FBFBFB;
+        box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
+        display: flex;
+        align-items: center;
+        text-align: left;
+        flex-direction: column;
+        font-size: 1em;
+    }
 }
 
 /*Desktop*/
@@ -262,6 +274,28 @@ body
     border-bottom: 0.25em solid #F06543; 
 }
 
+#introIcons
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#intro a
+{
+    width: 50%;
+    margin-left: -2em;
+    margin-right: -2em;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#introIcons img
+{
+    width: 15%;
+}
+
 #intro h1
 {
     color: #F06543;
@@ -306,6 +340,48 @@ body
 #listWrapper li
 {
     padding: 0.25em;
+}
+
+#projectWrapper
+{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+#projects ul
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: -2.5em; 
+}
+
+#projects li
+{
+    width: 80%;
+    background-color: #FBFBFB;
+    box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
+    padding: 1em;
+    margin: 1em;
+    list-style-type: none;
+}
+
+#projects li div
+{
+    box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
+    background-color: #C6C8C8;
+    padding: 1em;
+    margin-left: -1em;
+    margin-right: -1em;
+    margin-bottom: -1em;
+}
+
+#projects a
+{
+    text-decoration: none;
+    border-bottom: 0.25em solid #F06543; 
 }
 
 /*Contact*/
