--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -116,14 +116,16 @@ body
         display: flex;
         flex-direction: column;
         align-items: center;
+        width: 100%;
     }
 
     #skills ul
     {
-        width: 100%;
+        width: 90%;
         background-color: #FBFBFB;
         margin: 1em;
         box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
+        list-style-type: none;
     }
 
     #introWrapper
@@ -139,15 +141,31 @@ body
     }
 
     #projects
-    {
+    {     
+        align-items: center;
         padding: 1em;  
         background-color: #FBFBFB;
         box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
-        display: flex;
-        align-items: center;
-        text-align: left;
-        flex-direction: column;
         font-size: 1em;
+    }
+
+    #projects ul
+    {
+        display: flex;
+        text-align: left;
+        align-items: center;
+        flex-direction: column;
+        margin-left: -2.5em; 
+    }
+
+    #projects li
+    {
+        width: 90%;
+        background-color: #FBFBFB;
+        box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
+        padding: 1em;
+        margin: 1em;
+        list-style-type: none;
     }
 }
 
@@ -215,29 +233,60 @@ body
         display: flex;
         flex-direction: row;
         justify-content: center;
+        width: 100%;
     }
 
     #skills ul
     {
-        max-width: 50%;
-        min-width: 50%;
+        width: 100%;
         background-color: #FBFBFB;
         margin: 1em;
         box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
         display: flex;
-        align-items: flex-start;
         justify-content: center;
         flex-direction: column;
+        align-content: center;
+        list-style-type: none;
     }
 
     #introWrapper
     {
         margin-top: 1em;
+        margin-bottom: 1em;
     }
 
     #skillsWrapper
     {
         margin-top: 1em;
+        margin-bottom: 1em;
+    }
+
+    #projects
+    {     
+        padding: 1em;  
+        background-color: #FBFBFB;
+        box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
+        font-size: 1em;
+    }
+
+    #projects ul
+    {
+        display: flex;
+        text-align: left;
+        justify-content: center;
+        flex-wrap: wrap;
+        flex-direction: row;
+        margin-left: -2.5em; 
+    }
+
+    #projects li
+    {
+        width: 40%;
+        background-color: #FBFBFB;
+        box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
+        padding: 1em;
+        margin: 1em;
+        list-style-type: none;
     }
 }
 
@@ -329,7 +378,7 @@ body
 #skills li
 {
     font-size: 1em;
-    text-align: left;
+    margin-left: -2.5em; 
 }
 
 #skills
@@ -356,33 +405,17 @@ body
     justify-content: center;
 }
 
-#projects ul
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-left: -2.5em; 
-}
-
-#projects li
-{
-    width: 80%;
-    background-color: #FBFBFB;
-    box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
-    padding: 1em;
-    margin: 1em;
-    list-style-type: none;
-}
-
 #projects li div
 {
     box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
-    background-color: #C6C8C8;
+    background-color: #313638;
     padding: 1em;
     margin-left: -1em;
     margin-right: -1em;
     margin-bottom: -1em;
+    margin-top: 1em;
+    min-height: 16em;
+    color: #fbfbfb;
 }
 
 #projects a
